# nexus-trade

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
research/: calibration_pipeline.py
scripts/: download_data.py  news_export.mq5
src/nexus_trade/: cli.py  main.py  orchestrator.py  runner.py
src/nexus_trade/config/: _base.py  account.py  profile.py  strategy.py  timings.py
src/nexus_trade/config/profiles/: example.toml
src/nexus_trade/core/: connection.py  constants.py  data_handler.py  models.py  protocols.py  registry.py  repository.py  state.py  symbol.py  types.py
src/nexus_trade/execution/: executor.py  request.py  trade_ids.py
src/nexus_trade/filters/: costs.py  meta.py  news.py
src/nexus_trade/logging/: async_logger.py  logger.py  trade_logger.py
src/nexus_trade/risk/: manager.py
src/nexus_trade/strategies/: base.py
src/nexus_trade/strategies/sma_crossover/: config.py  strategy.py
src/nexus_trade/tools/: calibrator.py  indicators.py
src/nexus_trade/utils/: db.py  format.py  system.py
tests/: conftest.py  test_config.py  test_constants.py  test_data_handler.py  test_executor.py  test_format.py  test_logger.py  test_models.py  test_news_filter.py  test_repository.py  test_repository_concurrency.py  test_requests.py  test_risk_manager.py  test_state.py  test_trade_ids.py
tools/: db.py
typings/MetaTrader5/: __init__.pyi
